// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option Button Is checked 1`] = `
.c0 {
  position: absolute;
  z-index: -1;
}

.c0 + label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: 8px;
  color: #57666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
}

.c0:checked + label {
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

<div>
  <input
    checked={true}
    className="c0"
    name="test"
    type="radio"
    value={2}
  />
  <label>
    option
  </label>
</div>
`;

exports[`Option Button Matches the snapshot 1`] = `
.c0 {
  position: absolute;
  z-index: -1;
}

.c0 + label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: 8px;
  color: #57666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
}

.c0:checked + label {
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

<div>
  <input
    className="c0"
    name="test"
    type="radio"
    value={2}
  />
  <label>
    option
  </label>
</div>
`;
